# dwave-preprocessing

./: .gitignore  .gitmodules  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
docs/: Doxyfile  Makefile  README.rst  api_ref.rst  composites.rst  conf.py  cpp.rst  index.rst  lower_bounds.rst  presolve.rst  release_notes.rst  requirements.txt  sdk_index.rst
docs/reference/: composites.rst  cpp.rst  index.rst  lower_bounds.rst  presolve.rst  roof_duality.rst
dwave/: __init__.py
dwave/preprocessing/: __init__.py  composites.py  cyfix_variables.pyx  fix_variables.hpp  implication_network.hpp  libcpp.pxd  lower_bounds.py  mapping_policy.hpp  package_info.py  posiform_info.hpp  roof_duality.py
dwave/preprocessing/composites/: __init__.py  clip.py  connected_components.py  fix_variables.py  scale.py  spin_reversal_transform.py
dwave/preprocessing/include/dwave/: exceptions.hpp  flags.hpp  presolve.h  presolve.hpp
dwave/preprocessing/include/dwave-preprocessing/: fix_variables.hpp  helper_graph_algorithms.hpp  implication_network.hpp  mapping_policy.hpp  posiform_info.hpp  push_relabel.hpp
dwave/preprocessing/presolve/: __init__.py  cypresolve.pxd  cypresolve.pyi  cypresolve.pyx  exceptions.py  pypresolve.py
dwave/preprocessing/src/: exceptions.cpp  presolve.cpp  presolveimpl.hpp
releasenotes/notes/: SRT-refresh-069d6054be246be7.yaml  avoid-Presolve-constructor-copy-4915915d2725e4fe.yaml  bounds-nan-c4fc9b0f32c7cce6.yaml  c++-Presolver.restore-147bfaac7d439695.yaml  cython3-and-python312-a72fe605c7d48325.yaml  develwheel-1.4.0-55ede67315399961.yaml  dimod-0.12.13-d81ad924267be261.yaml  dimod-0.12.16-962879caf58b44c2.yaml  domain-propagation-7b4da99379fcf305.yaml  drop-py3.7-4d2d65390d03a123.yaml  faster-discrete-marker-normalization-a2feaead389ff14e.yaml  faster-small-bias-removal-96f364d2cd50bd88.yaml  first-b677fec1a43701b1.yaml  fix-SRT-variable-order-c213b1d8f8ea0458.yaml  fix-presolve-quadratic-9b554f5cefccb40c.yaml  fix-sampleset-info-propagation-e81c9a51fb708bc2.yaml  inf-21c9fc0db2ae759c.yaml  load-presolvers-by-default-3472afca76831aa8.yaml  make-composites-scoped-b08bb56a2bad77f8.yaml  presolve-nogil-9f000e3179f36084.yaml  presolve-pimpl-00987944df99570e.yaml  presolve-refactor-d9c3d2fc91715c8e.yaml  presolve-time-limit-76a64a5e42735042.yaml  py311-6f01f9c9889629e7.yaml  python-level-normalization-d5e685c1ffc8cace.yaml  refactor-release-note-8d3cc3782f07ad88.yaml  separate-normalization-from-presolve-bb6116ffd3c25973.yaml  separate-normalization-from-presolve-f36bca47f57f59d9.yaml  srts-for-SpinReversalComposite-70d17f0cc8192ca7.yaml
roof_duality/: _fix_variables.pyx  fix_variables.hpp  helper_data_structures.hpp  helper_graph_algorithms.hpp  implication_network.hpp  mapping_policy.hpp  posiform_info.hpp  push_relabel.hpp  roof_duality.hpp
tests/: requirements.txt  test_clip.py  test_composites.py  test_composites_common.py  test_connected_components.py  test_fix_variables.py  test_presolve.py  test_roof_duality.py  test_scale.py  test_spin_reversal_transform.py
tests/data/: bug56.0.cqm  bug56.1.cqm
testscpp/: Makefile
testscpp/tests/: test_presolve.cpp  test_presolveimpl.cpp  test_roof_duality.cpp  test_roofduality.cpp
