[build-system]
requires = [
    "setuptools>=46.4.0",
    "wheel>=0.30.0",
    "Cython>=0.29.21,<3.0",
    'numpy==1.17.3;python_version<"3.8"',  # oldest supported by dimod
    'oldest-supported-numpy;python_version>="3.8"',
    "dimod==0.12.0rc1",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-verbosity = "1"
skip = "pp* *musllinux*"

[tool.cibuildwheel.linux]
archs = "x86_64 aarch64"
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

[tool.cibuildwheel.macos]
# We follow NumPy and don't build universal wheels, see https://github.com/numpy/numpy/pull/20787
archs = "x86_64 arm64"

[tool.cibuildwheel.windows]
archs = "AMD64"
