[metadata]
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = Apache 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/dwavesystems/dwave-preprocessing
download_url = https://github.com/dwavesystems/dwave-preprocessing/releases
version = attr: dwave.preprocessing.__version__

# keep description, author and author email up to date with dimod.package_info
author = D-Wave Systems Inc.
author_email = tools@dwavesys.com
description = An API for preprocessing tools

[options]
include_package_data = True
packages = 
    dwave
    dwave.preprocessing
python_requires = >=3.6
zip_safe = False
